--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "country-data": "0.0.31",
     "leaflet": "^1.7.1",
+    "luxon": "^1.26.0",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
